--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="/images/banner/banner1.png" alt="Snow"
+            <img src="images/banner/banner1.png" alt="Snow"
                 style="width:100%;">
             <div class="top-right">
                 <h1>All Thinks Are
@@ -54,19 +54,19 @@
                 <br>
                 <br>
                 <div>
-                    <img src="/images/tick.png" width="40px" alt=""><a href="">Contrary
+                    <img src="images/tick.png" width="40px" alt=""><a href="">Contrary
                         to popular belief, is not simply.</a>
                     <br>
-                    <img src="/images/tick.png" width="40px" alt=""><a href="">Contrary
+                    <img src="images/tick.png" width="40px" alt=""><a href="">Contrary
                         to popular belief.</a>
                     <br>
-                    <img src="/images/tick.png" width="40px" alt=""><a href="">Contrary
+                    <img src="images/tick.png" width="40px" alt=""><a href="">Contrary
                         to popular , is not simply.</a>
                     <br>
-                    <img src="/images/tick.png" width="40px" alt=""><a href="">Contrary
+                    <img src="images/tick.png" width="40px" alt=""><a href="">Contrary
                         to popular belief, is not simply.</a>
                     <br>
-                    <img src="/images/tick.png" width="40px" alt=""><a href="">Contrary
+                    <img src="images/tick.png" width="40px" alt=""><a href="">Contrary
                         to popular simply.</a>
                     <br>
                 </div>
@@ -79,22 +79,22 @@
             <h3 class="my-plan">My Plans</h3>
             <div class="skill-container">
                 <div class="skill">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="">
                     <p class="skill-title">Web Development</p>
                     <p class="skill-description">I want to start</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Java Script</p>
                     <p class="skill-description">I want to learn</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="">
                     <p class="skill-title">ecommerce</p>
                     <p class="skill-description">I want to end</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
                     <p class="skill-title">No Smoking</p>
                     <p class="skill-description">No spmoking</p>
                 </div>
@@ -104,7 +104,7 @@
                 --->
         </section>
         <div class="container">
-            <img src="/images/watch.png" alt="watch"
+            <img src="images/watch.png" alt="watch"
                 style="width: 1240px;
                 height: 400px;">
             <div class="top-right-2">
@@ -134,9 +134,9 @@
             <p class="footer_email">Phone : 01500 00 00 00</p>
 
             <div class="footer_imge">
-                <img src="/images/icons/fb.png" alt="">
-                <img src="/images/icons/twitter.png" alt="">
-                <img src="/images/icons/youtube.png" alt="">
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
             </div>
             </div>
 
