footer issue fixed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <br>
                 <input type="email" name="email" placeholder="Type Your Email" > 
                 <br>
-                <button class="btn-orange" >Subscribe</button>
+                <button class="btn-orange2" >Subscribe</button>
             </div>
 
 
