--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <br>
         <br>
 
-
+        <!--- footer section --->
         <footer class="footer">
 
             <div class="content" >
